More documentation and cleaning up.

--- a/examples/interview_with_customer.ipynb
+++ b/examples/interview_with_customer.ipynb
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,8 @@
     }
    ],
    "source": [
-    "customer.listen_and_act(\"What would you say are your main problems today? Please be as specific as possible.\", max_content_length=3000)"
+    "customer.listen_and_act(\"What would you say are your main problems today? Please be as specific as possible.\", \n",
+    "                        max_content_length=3000)"
    ]
   },
   {
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -633,7 +634,8 @@
     }
    ],
    "source": [
-    "customer.listen_and_act(\"Please give more detail about that, so that we can think about a project to pursue this direction.\", max_content_length=3000)"
+    "customer.listen_and_act(\"Please give more detail about that, so that we can think about a project to pursue this direction.\", \n",
+    "                        max_content_length=3000)"
    ]
   },
   {
