--- a/examples/product_brainstorming.ipynb
+++ b/examples/product_brainstorming.ipynb
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2307,7 +2307,8 @@
     "extractor = InteractionResultsExtractor()\n",
     "\n",
     "extractor.extract_results_from_agent(rapporteur, \n",
-    "                          extraction_objective=\"Summarize the the ideas that the group came up with, explaining each idea as an item of a list. Describe in details the benefits and drawbacks of each.\", \n",
+    "                          extraction_objective=\"Summarize the the ideas that the group came up with, explaining each idea as an item of a list.\" \\\n",
+    "                                               \"Describe in details the benefits and drawbacks of each.\", \n",
     "                          situation=\"A focus group to brainstorm ideas for a new product.\")"
    ]
   },
@@ -2321,7 +2322,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
