Improves varied details.

--- a/examples/advertisement_for_tv.ipynb
+++ b/examples/advertisement_for_tv.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,9 +39,9 @@
     "import tinytroupe\n",
     "from tinytroupe.agent import TinyPerson\n",
     "from tinytroupe.examples import create_lisa_the_data_scientist, create_oscar_the_architect\n",
-    "from tinytroupe.personfactory import TinyPersonFactory\n",
+    "from tinytroupe.factory import TinyPersonFactory\n",
     "\n",
-    "from tinytroupe.extraction import InteractionResultsExtractor"
+    "from tinytroupe.extraction import ResultsExtractor"
    ]
   },
   {
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
     }
    ],
    "source": [
-    "extractor = InteractionResultsExtractor()\n",
+    "extractor = ResultsExtractor()\n",
     "\n",
     "extraction_objective=\"Find the ad the agent chose. Extract the Ad number and title.\"\n",
     "\n",
@@ -1536,7 +1536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "extractor = InteractionResultsExtractor()\n",
+    "extractor = ResultsExtractor()\n",
     "extraction_objective=\"Find the ad the agent chose. Extract the Ad number and title. Extract only ONE result.\"\n",
     "\n",
     "choices =[]\n",
