--- a/examples/creating_and_validating_agents.ipynb
+++ b/examples/creating_and_validating_agents.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -32,10 +32,10 @@
     "import tinytroupe\n",
     "from tinytroupe.agent import TinyPerson\n",
     "from tinytroupe.environment import TinyWorld, TinySocialNetwork\n",
-    "from tinytroupe.personfactory import TinyPersonFactory\n",
-    "from tinytroupe.personchecker import TinyPersonChecker\n",
+    "from tinytroupe.factory import TinyPersonFactory\n",
+    "from tinytroupe.validation import TinyPersonValidator\n",
     "from tinytroupe.extraction import default_extractor as extractor\n",
-    "from tinytroupe.extraction import InteractionResultsReducer\n",
+    "from tinytroupe.extraction import ResultsReducer\n",
     "import tinytroupe.control as control\n",
     "\n",
     "import textwrap"
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
     }
    ],
    "source": [
-    "banker_score, banker_justification = TinyPersonChecker.validate_person(banker, expectations=banker_expectations, include_agent_spec=False, max_content_length=None)"
+    "banker_score, banker_justification = TinyPersonValidator.validate_person(banker, expectations=banker_expectations, include_agent_spec=False, max_content_length=None)"
    ]
   },
   {
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -839,7 +839,7 @@
     }
    ],
    "source": [
-    "score, justification = TinyPersonChecker.validate_person(busy_knowledge_worker, expectations=bkw_expectations, include_agent_spec=False, max_content_length=None)"
+    "score, justification = TinyPersonValidator.validate_person(busy_knowledge_worker, expectations=bkw_expectations, include_agent_spec=False, max_content_length=None)"
    ]
   },
   {
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1173,7 +1173,7 @@
     }
    ],
    "source": [
-    "wrong_expectations_score, wrong_expectations_justification = TinyPersonChecker.validate_person(busy_knowledge_worker, expectations=banker_expectations, include_agent_spec=False, max_content_length=None)\n"
+    "wrong_expectations_score, wrong_expectations_justification = TinyPersonValidator.validate_person(busy_knowledge_worker, expectations=banker_expectations, include_agent_spec=False, max_content_length=None)\n"
    ]
   },
   {
