--- a/examples/online_advertisement_for_travel.ipynb
+++ b/examples/online_advertisement_for_travel.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,8 +39,8 @@
     "import tinytroupe\n",
     "from tinytroupe.agent import TinyPerson\n",
     "from tinytroupe.examples import create_lisa_the_data_scientist, create_oscar_the_architect, create_marcos_the_physician\n",
-    "from tinytroupe.personfactory import TinyPersonFactory\n",
-    "from tinytroupe.extraction import InteractionResultsExtractor"
+    "from tinytroupe.factory import TinyPersonFactory\n",
+    "from tinytroupe.extraction import ResultsExtractor"
    ]
   },
   {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -958,7 +958,7 @@
     }
    ],
    "source": [
-    "extractor = InteractionResultsExtractor()\n",
+    "extractor = ResultsExtractor()\n",
     "choices = []\n",
     "\n",
     "for person in people:\n",
@@ -1882,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1947,7 +1947,7 @@
     }
    ],
    "source": [
-    "extractor = InteractionResultsExtractor()\n",
+    "extractor = ResultsExtractor()\n",
     "\n",
     "choices =[]\n",
     "\n",
