--- a/examples/product_brainstorming.ipynb
+++ b/examples/product_brainstorming.ipynb
@@ -2302,9 +2302,9 @@
     }
    ],
    "source": [
-    "from tinytroupe.extraction import InteractionResultsExtractor\n",
+    "from tinytroupe.extraction import ResultsExtractor\n",
     "\n",
-    "extractor = InteractionResultsExtractor()\n",
+    "extractor = ResultsExtractor()\n",
     "\n",
     "extractor.extract_results_from_agent(rapporteur, \n",
     "                          extraction_objective=\"Summarize the the ideas that the group came up with, explaining each idea as an item of a list.\" \\\n",
