--- a/examples/scratch/tool_usage.ipynb
+++ b/examples/scratch/tool_usage.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -28,14 +28,14 @@
     "sys.path.append('../..')\n",
     "\n",
     "import tinytroupe\n",
-    "from tinytroupe.agent import TinyPerson, ToolUse\n",
+    "from tinytroupe.agent import TinyPerson, TinyToolUse\n",
     "from tinytroupe.environment import TinyWorld, TinySocialNetwork\n",
-    "from tinytroupe.personfactory import TinyPersonFactory\n",
+    "from tinytroupe.factory import TinyPersonFactory\n",
     "from tinytroupe.extraction import default_extractor as extractor\n",
-    "from tinytroupe.extraction import InteractionResultsReducer\n",
+    "from tinytroupe.extraction import ResultsReducer\n",
     "import tinytroupe.control as control\n",
     "from tinytroupe.extraction import ArtifactExporter\n",
-    "from tinytroupe.enrichment import Enricher\n",
+    "from tinytroupe.enrichment import TinyEnricher\n",
     "\n",
     "from tinytroupe.tools import TinyWordProcessor"
    ]
@@ -72,13 +72,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "exporter = ArtifactExporter(base_output_folder=\"./outputs/scratches/tool_usage\")\n",
-    "enricher = Enricher()\n",
-    "tooluse_faculty = ToolUse(tools=[TinyWordProcessor(exporter=exporter, enricher=enricher)])\n"
+    "enricher = TinyEnricher()\n",
+    "tooluse_faculty = TinyToolUse(tools=[TinyWordProcessor(exporter=exporter, enricher=enricher)])\n"
    ]
   },
   {
