--- a/examples/synthetic_data_generation.ipynb
+++ b/examples/synthetic_data_generation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,9 +39,9 @@
     "import tinytroupe\n",
     "from tinytroupe.agent import TinyPerson\n",
     "from tinytroupe.environment import TinyWorld, TinySocialNetwork\n",
-    "from tinytroupe.personfactory import TinyPersonFactory\n",
+    "from tinytroupe.factory import TinyPersonFactory\n",
     "from tinytroupe.extraction import default_extractor as extractor\n",
-    "from tinytroupe.extraction import InteractionResultsReducer\n",
+    "from tinytroupe.extraction import ResultsReducer\n",
     "import tinytroupe.control as control"
    ]
   },
@@ -902,11 +902,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reducer = InteractionResultsReducer()\n",
+    "reducer = ResultsReducer()\n",
     "\n",
     "def aux_extract_content(focus_agent: TinyPerson, source_agent:TinyPerson, target_agent:TinyPerson, kind:str, event: str, content: str, timestamp:str):\n",
     "\n",
