--- a/examples/wordprocessor_tool_usage.ipynb
+++ b/examples/wordprocessor_tool_usage.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -39,12 +39,12 @@
     "\n",
     "import tinytroupe\n",
     "from tinytroupe.openai_utils import force_api_type\n",
-    "from tinytroupe.personfactory import TinyPersonFactory\n",
-    "from tinytroupe.agent import TinyPerson, ToolUse\n",
+    "from tinytroupe.factory import TinyPersonFactory\n",
+    "from tinytroupe.agent import TinyPerson, TinyToolUse\n",
     "from tinytroupe.environment import TinyWorld\n",
     "from tinytroupe import control\n",
-    "from tinytroupe.extraction import InteractionResultsExtractor, InteractionResultsReducer\n",
-    "from tinytroupe.enrichment import Enricher\n",
+    "from tinytroupe.extraction import ResultsExtractor, ResultsReducer\n",
+    "from tinytroupe.enrichment import TinyEnricher\n",
     "from tinytroupe.extraction import ArtifactExporter\n",
     "from tinytroupe.tools import TinyWordProcessor\n",
     "from tinytroupe.story import TinyStory\n",
@@ -63,13 +63,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "exporter = ArtifactExporter(base_output_folder=data_export_folder)\n",
-    "enricher = Enricher()\n",
-    "tooluse_faculty = ToolUse(tools=[TinyWordProcessor(exporter=exporter, enricher=enricher)])"
+    "enricher = TinyEnricher()\n",
+    "tooluse_faculty = TinyToolUse(tools=[TinyWordProcessor(exporter=exporter, enricher=enricher)])"
    ]
   },
   {
