for ollama modified

--- a/jiucai/china_jiucai_test.ipynb
+++ b/jiucai/china_jiucai_test.ipynb
@@ -82,11 +82,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "factory = TinyPersonFactory('Top Think Tank for Domestic Macroeconomic Analysis in China') #('中国国内宏观经济分析顶级智库')"
+    "factory = TinyPersonFactory('') #('中国国内宏观经济分析顶级智库')"
    ]
   },
   {
